# Claude-Context-Engine

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  wiki.yml
docs/: index.html  operations.md  review-2026-04-17.md
docs/superpowers/specs/: 2026-04-17-claude-context-engine-design.md  2026-04-18-cce-v02-improvements-design.md
docs/wiki/: CCE-In-Practice.md  CLI-Reference.md  Home.md  How-It-Works.md  Tech-Stack.md
src/context_engine/: __init__.py  cli.py  config.py  event_bus.py  models.py  project_commands.py  serve_http.py  services.py  utils.py
src/context_engine/compression/: compressor.py  output_rules.py  quality.py
src/context_engine/dashboard/: _page.py  server.py
src/context_engine/indexer/: chunker.py  embedder.py  embedding_cache.py  git_hooks.py  git_indexer.py  manifest.py  pipeline.py
src/context_engine/integration/: bootstrap.py  git_context.py  mcp_server.py  session_capture.py
tests/: test_cli_savings.py  test_config.py  test_event_bus.py  test_models.py  test_project_commands.py  test_real_life.py  test_token_efficiency.py
tests/compression/: test_compressor.py  test_ollama_client.py  test_quality.py
tests/dashboard/: test_server.py
tests/indexer/: test_chunker.py  test_embedder.py  test_embedding_cache.py  test_git_hooks.py  test_manifest.py
tests/integration/: test_bootstrap.py  test_git_context.py
tests/retrieval/: test_retriever.py
tests/storage/: test_graph_store.py  test_local_backend.py  test_vector_store.py
(+5 files in other folders)
