[project]
name = "claude-context-engine"
version = "0.1.0"
description = "Local context engine for Claude Code — indexes projects, compresses context, reduces token cost"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "lancedb>=0.6",
    "kuzu>=0.4",
    "sentence-transformers>=3.0",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "watchdog>=4.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "asyncssh>=2.14",
    "ollama>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
claude-context-engine = "context_engine.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
